--- a/style.css
+++ b/style.css
@@ -175,3 +175,45 @@ header {
   text-align: left;
   font-size: 16px;
 }
+
+/* Profile */
+
+.profile {
+  background-color: #eceff1;
+}
+
+.profile-group {
+  padding: 30px 0 90px 0;
+  width: 1024px;
+  display: flex;
+  margin: 0 auto;
+}
+
+.left-profile {
+  width: 50%;
+}
+
+.right-profile {
+  width: 50%;
+}
+
+.profile-photo {
+  background-image: url(img/my-icon.jpg);
+  height: 250px;
+  width: 250px;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.profile-title {
+  font-size: 20px;
+  margin: 20px 0 5px 0;
+}
+
+.profile-title:nth-child(1) {
+  margin-top: 0;
+}
+
+.profile-text {
+  font-size: 16px;
+}
