--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a {
   margin: 0 auto;
 }
 
-/* header */
+/* Header */
 
 header {
   background-color: #ec715f;
@@ -47,7 +47,7 @@ header {
   color: #fafafa;
 }
 
-/* main-visual  */
+/* Main-visual  */
 
 .main-visual {
   width: 100%;
@@ -70,9 +70,9 @@ header {
   padding-top: 10px;
 }
 
-/* portfolio */
+/* Portfolio */
 
-.portfolio {
+#portfolio {
   background-color: #eceff1;
 }
 
@@ -178,7 +178,7 @@ header {
 
 /* Profile */
 
-.profile {
+#profile {
   background-color: #eceff1;
 }
 
@@ -189,11 +189,11 @@ header {
   margin: 0 auto;
 }
 
-.left-profile {
+.left-content {
   width: 50%;
 }
 
-.right-profile {
+.right-content {
   width: 50%;
 }
 
@@ -205,15 +205,48 @@ header {
   border-radius: 50%;
 }
 
-.profile-title {
+.description-title {
   font-size: 20px;
   margin: 20px 0 5px 0;
 }
 
-.profile-title:nth-child(1) {
+.description-title:nth-child(1) {
   margin-top: 0;
 }
 
-.profile-text {
+.description-text {
   font-size: 16px;
+}
+
+/* Contact */
+
+.contact-group {
+  width: 800px;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
+  display: flex;
+}
+
+.left-content-content {
+  width: 130px;
+  margin: 0 auto;
+}
+
+.link-text {
+  color: #000;
+  text-decoration: underline;
+}
+
+.right-content-content {
+  margin: 0 auto;
+  width: 200px;
+}
+
+.right-content-content .fab {
+  font-size: 50px;
+  margin-right: 20px;
+}
+
+.right-content-content .fab:last-child) {
+  margin-right: 0;
 }
