--- a/style.css
+++ b/style.css
@@ -250,3 +250,18 @@ header {
 .right-content-content .fab:last-child) {
   margin-right: 0;
 }
+
+/* Footer */
+
+footer {
+  background-color: #ec715f;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+}
+
+.copyright {
+  font-size: 16px;
+  color: #fafafa;
+  text-align: center;
+}
