--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ header {
 
 /* Main-visual  */
 
-.main-visual {
+#main-visual {
   width: 100%;
   height: 650px;
-  background: url(img/mv.png);
+  background-image: url(img/mv.png);
   background-size: cover;
   text-align: center;
   color: #fafafa;
@@ -184,7 +184,6 @@ header {
 
 .profile-group {
   padding: 30px 0 90px 0;
-  width: 1024px;
   display: flex;
   margin: 0 auto;
 }
@@ -264,4 +263,144 @@ footer {
   font-size: 16px;
   color: #fafafa;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+  }
+
+  .sp-none {
+    display: none;
+  }
+
+  .right-content {
+    width: 100%;
+  }
+
+  .left-content {
+    width: 100%;
+  }
+
+  /* Header */
+  header {
+    height: 50px;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+  }
+
+  .logo {
+    height: 50px;
+  }
+
+  .menu-icon {
+    display: block;
+    border: 1px solid #fafafa;
+    width: 40px;
+    height: 40px;
+    margin: 5px 0;
+    cursor: pointer;
+  }
+
+  .list-bar {
+    display: block;
+    transition: all 0.4s;
+    background: #fafafa;
+    width: 25px;
+    height: 2px;
+    margin: 5px auto;
+  }
+  .list-bar:nth-child(1) {
+    margin-top: 10px;
+  }
+
+  .active .list-bar:nth-child(1) {
+    -webkit-transform: translateY(7px) rotate(-45deg);
+    transform: translateY(7px) rotate(-45deg);
+  }
+
+  .active .list-bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .active .list-bar:nth-child(3) {
+    -webkit-transform: translateY(-7px) rotate(45deg);
+    transform: translateY(-7px) rotate(45deg);
+  }
+
+  .menu {
+    position: fixed;
+    background: #ec715f;
+    display: none;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: #fafafa;
+    margin-top: 50px;
+    opacity: 0.9;
+  }
+
+  /* Main-visual */
+  #main-visual {
+    background-image: url(img/code.png);
+  }
+  .main-title {
+    font-size: 40px;
+  }
+  .main-text {
+    font-size: 18px;
+  }
+
+  /* Portfolio */
+  .production-group {
+    width: 300px;
+  }
+  .production {
+    margin-right: 0;
+  }
+
+  /* Feature */
+  .strength-group {
+    width: 320px;
+    flex-wrap: wrap;
+  }
+  .strength {
+    margin-top: 10px;
+    margin-right: 0;
+  }
+  .strength:first-child {
+    margin-top: 0;
+  }
+
+  /* Profile */
+  .profile-group {
+    text-align: center;
+    flex-wrap: wrap;
+  }
+  .profile-photo {
+    margin-bottom: 20px;
+  }
+
+  /* Contact */
+  .contact-group {
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: center;
+  }
+
+  .right-content-content {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .left-content-content {
+    width: 100%;
+  }
+  .right-content-content .fab {
+    margin-right: 8px;
+  }
+  .right-content-content .fab:last-child {
+    margin-right: 0;
+  }
 }
