--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ footer {
   /* Header */
   header {
     height: 50px;
+    line-height: 50px;
     position: fixed;
     top: 0;
     z-index: 10;
@@ -294,26 +295,39 @@ footer {
     height: 50px;
   }
 
+  /* ハンバーガーメニュー */
   .menu-icon {
-    display: block;
-    border: 1px solid #fafafa;
+    position: fixed;
+    right: 45px;
+    top: 5px;
     width: 40px;
     height: 40px;
-    margin: 5px 0;
-    cursor: pointer;
+    z-index: 10;
+    border-radius: 4px;
+    border: 2px solid #fafafa;
   }
 
   .list-bar {
     display: block;
-    transition: all 0.4s;
-    background: #fafafa;
-    width: 25px;
+    position: relative;
+    background-color: #fafafa;
+    width: 60%;
     height: 2px;
-    margin: 5px auto;
+    border-radius: 4px;
+    transition: all 0.4s;
+    left: 20%;
   }
 
   .list-bar:nth-child(1) {
-    margin-top: 10px;
+    top: 10px;
+  }
+
+  .list-bar:nth-child(2) {
+    top: 15px;
+  }
+
+  .list-bar:nth-child(3) {
+    top: 20px;
   }
 
   .active .list-bar:nth-child(1) {
@@ -332,15 +346,18 @@ footer {
 
   .menu {
     position: fixed;
-    background: #ec715f;
     display: none;
     top: 0;
-    left: 50%;
-    width: 100%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 50%;
     height: 100%;
     color: #fafafa;
     margin-top: 50px;
-    opacity: 0.9;
+  }
+
+  .menu-list a {
+    font-weight: bold;
   }
 
   /* Main-visual */
